--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/printf"]
 	path = lib/printf
 	url = https://github.com/mpaland/printf.git
+[submodule "lib/coremark"]
+	path = lib/coremark
+	url = https://github.com/eembc/coremark.git
