Use cached region for benchmarks, added some optimization opts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,14 +26,16 @@ set(TARGET_INCLUDES
 )
 
 set(TARGET_DEFS
-    "ITERATIONS=65536"
+    "ITERATIONS=2000UL"
     "PERFORMANCE_RUN=1"
 )
 
 set(TARGET_FLAGS_HARDWARE "-m4-300 -ml")
 
-set(CMAKE_C_FLAGS_DEBUG          "-DDEBUG -g -O2")
-set(CMAKE_CXX_FLAGS_DEBUG        "-DDEBUG -g -O2")
+set(TARGET_MANUAL_OPTS "-fauto-inc-dec -fbranch-count-reg -fcombine-stack-adjustments -fcompare-elim -fcprop-registers -fdce -fdefer-pop -fdelayed-branch -fdse -fforward-propagate")
+
+set(CMAKE_C_FLAGS_DEBUG          "-DDEBUG -g -O0 ${TARGET_MANUAL_OPTS}")
+set(CMAKE_CXX_FLAGS_DEBUG        "-DDEBUG -g -O0 ${TARGET_MANUAL_OPTS}")
 set(CMAKE_EXE_LINKER_FLAGS_DEBUG "")
 
 set(CMAKE_C_FLAGS_RELEASE          "-DNDEBUG -O2 -flto")
@@ -42,7 +44,7 @@ set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-flto")
 
 set(CMAKE_C_FLAGS          "${TARGET_FLAGS_HARDWARE} -Wall -ffunction-sections -fdata-sections")
 set(CMAKE_CXX_FLAGS        "${TARGET_FLAGS_HARDWARE} -Wall -ffunction-sections -fdata-sections")
-set(CMAKE_EXE_LINKER_FLAGS "${TARGET_FLAGS_HARDWARE} -Wall -lc -lm -nostartfiles -Wl,--print-memory-usage -Wl,--gc-sections")
+set(CMAKE_EXE_LINKER_FLAGS "${TARGET_FLAGS_HARDWARE} -specs=nosys.specs -Wall -lc -lm -nostartfiles -Wl,--print-memory-usage -Wl,--gc-sections")
 
 add_compile_definitions(${TARGET_DEFS})
 include_directories(${TARGET_INCLUDES})
