--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TARGET_SOURCES
     "src/core_portme.c"
     "src/stx7105_exc.c"
     "src/stx7105_utils.c"
+    "src/syscalls.c"
     "startup_stx7105.S"
 )
 
@@ -26,19 +27,21 @@ set(TARGET_INCLUDES
 )
 
 set(TARGET_DEFS
-    "ITERATIONS=2000UL"
-    "PERFORMANCE_RUN=1"
+    "ITERATIONS=20000UL"
+    "VALIDATION_RUN=1"
 )
 
 set(TARGET_FLAGS_HARDWARE "-m4-300 -ml")
 
-set(CMAKE_C_FLAGS_DEBUG          "-DDEBUG -g -O1")
-set(CMAKE_CXX_FLAGS_DEBUG        "-DDEBUG -g -O1")
+set(TARGET_FLAGS_OPTS "-O3 -fomit-frame-pointer -funroll-all-loops -finline-limit=1000 -ftree-dominator-opts -fno-if-conversion2 -fselective-scheduling -fno-code-hoisting -freorder-blocks-and-partition")
+
+set(CMAKE_C_FLAGS_DEBUG          "-DDEBUG -g -O0")
+set(CMAKE_CXX_FLAGS_DEBUG        "-DDEBUG -g -O0")
 set(CMAKE_EXE_LINKER_FLAGS_DEBUG "")
 
-set(CMAKE_C_FLAGS_RELEASE          "-DNDEBUG -O2 -flto")
-set(CMAKE_CXX_FLAGS_RELEASE        "-DNDEBUG -O2 -flto")
-set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-flto")
+set(CMAKE_C_FLAGS_RELEASE          "-DNDEBUG ${TARGET_FLAGS_OPTS}")
+set(CMAKE_CXX_FLAGS_RELEASE        "-DNDEBUG ${TARGET_FLAGS_OPTS}")
+set(CMAKE_EXE_LINKER_FLAGS_RELEASE "    ")
 
 set(CMAKE_C_FLAGS          "${TARGET_FLAGS_HARDWARE} -Wall -ffunction-sections -fdata-sections")
 set(CMAKE_CXX_FLAGS        "${TARGET_FLAGS_HARDWARE} -Wall -ffunction-sections -fdata-sections")
